Attempted to fix the wrapping around carousel

--- a/web/public/css/carousel.css
+++ b/web/public/css/carousel.css
@@ -40,7 +40,7 @@ body {
 /* Carousel base class */
 .carousel {
   height: 350px;
-  margin-bottom: 60px;
+  margin-bottom: 15px;
 }
 /* Since positioning the image, we need to help out the caption */
 .carousel-caption {
@@ -102,8 +102,8 @@ body {
     margin-top: 20px;
   }
   .navbar-wrapper .container {
-    padding-right: 15px;
-    padding-left: 15px;
+    padding-right: 10px;
+    padding-left: 10px;
   }
   .navbar-wrapper .navbar {
     padding-right: 0;
